When full-size images are shown throughout the site (pile galleries, species pages), use images that are max. 1000px in height or width, rather than the former original full-size image files, which were several MB in size. The new images should average about 350 KB for more sensible bandwidth use.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1852 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -38,7 +38,7 @@
                                     {% for pile_image in pile_images %}
                                         {% with pile_image.content_image as i %}
                                             {% with i.creator as photographer %}
-                                            <a href="{{ i.image.url }}"
+                                            <a href="{{ i.image.extra_thumbnails.scaled.absolute_url }}"
                                                 rel="shadowbox[{{ pilegroup.slug }}]"
                                                 title="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
                                                 <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
