--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -63,7 +63,8 @@
                         <div class="scrollableArea">
                             {% for i in species_images %}
                                 {% with i.creator as photographer %}
-                                <a href="{{ i.image.url }}" {% if forloop.counter == 1 %}id="startimage"{% endif %}
+                                <a href="{{ i.image.extra_thumbnails.scaled.absolute_url }}"
+                                    {% if forloop.counter == 1 %}id="startimage"{% endif %}
                                     title="{% photo_title_credit i.image_type scientific_name photographer %}">
                                     <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
                                         alt="{% photo_title_credit i.image_type scientific_name photographer %}">
