Fix some places where an included bit of JavaScript had some extra script tags around it due to recent change.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1853 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -7,9 +7,12 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
 {% endblock %}
 
 {% block js_top %}
-    API_URL = '{% url api-base %}';
+    <script>
+        API_URL = '{% url api-base %}';
+    </script>
+
     {# TODO: eventually move elsewhere #}
-    {% include "simplekey/partner_site_inline_js.html" %}
+    {% include "simplekey/_partner_site_js.html" %}
 {% endblock %}
 
 {% block js_require %}
