Make video clips play automatially upon opening in a lightbox.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1858 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -30,7 +30,7 @@
                     </div>
                     <p class="more-info">
                         <a rel="shadowbox;height=380;width=640;"
-                            href="http://www.youtube.com/v/{{ group.youtube_id }}">
+                            href="http://www.youtube.com/v/{{ group.youtube_id }}&amp;autoplay=1">
                         Get more info</a>
                     </p>
                 </div>
@@ -57,7 +57,7 @@
                             href="/{{ group.slug }}/{{ subgroup.slug }}/"></a>
                         <p class="more-info">
                             <a rel="shadowbox;height=380;width=640;"
-                                href="http://www.youtube.com/v/{{ subgroup.youtube_id }}">
+                                href="http://www.youtube.com/v/{{ subgroup.youtube_id }}&amp;autoplay=1">
                             Get more info</a>
                         </p>
                     </div>
@@ -80,7 +80,7 @@
         <!-- TODO: Change YouTube ID to actual groups/subgroups video
                    clip when it becomes available -->
         <a rel="shadowbox;height=380;width=640;"
-            href="http://www.youtube.com/v/VWDc9oyBj5Q">View a short video
+            href="http://www.youtube.com/v/VWDc9oyBj5Q&amp;autoplay=1">View a short video
             explaining plant groups and subgroups</a>
     </p>
 </div>
