--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -154,7 +154,7 @@
     <div class="section">
         <h5>Watch Video:</h5>
         {% if getting_started_youtube_id %}
-            <a href="http://www.youtube.com/v/{{ getting_started_youtube_id }}"
+            <a href="http://www.youtube.com/v/{{ getting_started_youtube_id }}&amp;autoplay=1"
                 rel="shadowbox;height=380;width=640;"><img
                 class="shadow" alt=""
                 title="How to use the Go Botany Simple Key"
