--- a/gobotany/simplekey/templates/simplekey/help_video.html
+++ b/gobotany/simplekey/templates/simplekey/help_video.html
@@ -16,7 +16,7 @@
         {% endif %}
             <div class="video-topic">
                 <a rel="shadowbox;height=380;width=640;"
-                  href="http://www.youtube.com/v/{{ video.youtube_id }}">
+                  href="http://www.youtube.com/v/{{ video.youtube_id }}&amp;autoplay=1">
                     <img class="shadow" src="http://img.youtube.com/vi/{{ video.youtube_id }}/hq2.jpg" alt="">
                 </a>
                 <h4>{{ video.title }}</h4>
