--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -65,7 +65,7 @@
                                 {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
                             </p>
                             <p class="vid">
-                                <a href="http://www.youtube.com/v/{{ pile.youtube_id }}"
+                                <a href="http://www.youtube.com/v/{{ pile.youtube_id }}&amp;autoplay=1"
                                     rel="shadowbox;height=380;width=640;">View
                                     a short video about this subgroup</a>
                             </p>
