--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -64,7 +64,8 @@
                                 {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
                             </p>
                             <p class="vid">
-                                <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this group</a>
+                            <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}&amp;autoplay=1" 
+                                rel="shadowbox;height=380;width=640;">View a short video about this group</a>
                             </p>
                             <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
                         </div>
