Show a disabled state for image gallery previous/next buttons on the levels 1 and 2 pages and plant preview popups when there are no further images in either the previous or next directions.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1862 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -498,6 +498,11 @@ body.app {
 .controls a.prev {
 	background: url(/static/images/icons/prev-larger.png) 0 0 no-repeat transparent;	
 }
+.controls a.disabled {
+    cursor: default;
+    opacity: 0.4;
+    filter:Alpha(opacity=40) /* For IE8 and earlier */
+}
 .list-item .details {
 	float: left;	
 	width: 425px;
