Add the words Simple Key to the page titles for the level 2 and 3 pages for eventual display in the site's search engine results.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1863 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -1,7 +1,7 @@
 {% extends "simplekey/_new_base.html" %}
 {% load simplekey_extras %}
 
-{% block title %}{{ pilegroup.name }}{% endblock %}
+{% block title %}{{ pilegroup.name }}: Simple Key{% endblock %}
 
 {% block body_attributes %}id="plant-id-2" class="claro app"{% endblock %}
 
