--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -1,6 +1,6 @@
 {% extends "simplekey/_new_base.html" %}
 
-{% block title %}{{ pilegroup.friendly_title }}: {{ pile.friendly_title }}{% endblock %}
+{% block title %}{{ pilegroup.friendly_title }}: {{ pile.friendly_title }}: Simple Key{% endblock %}
 
 {% block js_require %}
     original_location_hash = window.location.hash; // for results_overlay.js
