--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1213,7 +1213,10 @@ but Dojo/Dijit transforms them into divs with ids starting with widget_. */
 .working-area .apply-btn:active {
     background-position: 0 -82px;
 }
-
+.working-area .apply-btn.disabled {
+    background-position: 0 0;
+    opacity: 0.2;
+}
 
 #sidebar .loading {
     background: url(/static/images/icons/preloaders-dot-net-sm.gif) no-repeat scroll 0 0 transparent;
