Add the main Simple Key groups list page to the search engine indexes and search results page, with a new icon for this result type.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1866 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -68,8 +68,17 @@
                                             title="Glossary page">
 {% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title }}</a>
                                         {% else %}
-                                            Error: unknown search
-                                            result model name.
+                                            {% if result.model_name == 'groupslistpage' %}
+                                            <a href="{% url simplekey %}"><img
+                                                src="/static/images/icons/icon-groups-list.png"
+                                                alt=""
+                                                title="Simple Key plant groups page">
+{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title }}</a>
+                                            </a>
+                                            {% else %}
+                                                Error: unknown search
+                                                result model name.
+                                            {% endif %}
                                         {% endif %}
                                     {% endif %}
                                 {% endif %}
