Revise the search page template so it will be easier to maintain and extend.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1867 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_script_constants.html
+++ b/gobotany/simplekey/templates/simplekey/_script_constants.html
@@ -1,5 +1,5 @@
         <script>
             API_URL = '{% url api-base %}';
-            SEARCH_URL = '{% url simplekey-search %}';
+            SEARCH_URL = '{% url search %}';
             SUGGEST_URL = '{% url simplekey-search-suggest %}';
         </script>
