--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -14,75 +14,66 @@
 {% endblock %}
 
 {% block body_content %}
-        {% include "simplekey/_header.html" %}
+    {% include "simplekey/_header.html" %}
 
-        <div class="content">
-            <div class="container">
-                <div id="main">
-                    <h2>
-                        {% if paginator.count > 0 %}
-                            {% if page.number > 1 %}
-                                Page {{ page.number }} of 
-                            {% endif %}
-                            {{ paginator.count|intcomma }}
-                        {% else %}
-                            No
+    <div class="content">
+        <div class="container">
+            <div id="main">
+                <h2>
+                    {% if paginator.count > 0 %}
+                        {% if page.number > 1 %}
+                            Page {{ page.number }} of 
                         {% endif %}
-                        Result{% if paginator.count != 1 %}s{% endif %}
-                        for
-                        <strong>{{ query }}</strong>
-                    </h2>
-                    <ul id="search-results-list">    
-                    {% for result in page.object_list %}
-                        <li>
-                            {% if result.scientific_name %}
+                        {{ paginator.count|intcomma }}
+                    {% else %}
+                        No
+                    {% endif %}
+                    Result{% if paginator.count != 1 %}s{% endif %}
+                    for
+                    <strong>{{ query }}</strong>
+                </h2>
+
+                <ul id="search-results-list">    
+                {% for result in page.object_list %}
+                    <li>
+                        {% search_highlight result.title with query as item_title excerpt 'False' %}
+                        {% if result.model_name == 'taxon' %}
                             <a href="{{ url_base }}/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/"><img 
-                                    src="/static/images/icons/icon-leaf.png"
-                                    alt="" title="Species page">
-{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title|italicize_plant|safe }}</a>
-                            {% else %}
-                                {% if result.model_name == 'family' %}
-                                <a href="{{ url_base }}/families/{{ result.name|lower }}/"><img
-                                    src="/static/images/icons/icon-family.png"
-                                    alt="" title="Family page">
-{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title }}</a>
-                                {% else %}
-                                    {% if result.model_name == 'genus' %}
-                                    <a href="{{ url_base }}/genera/{{ result.name|lower }}/"><img
-                                        src="/static/images/icons/icon-genus.png"
-                                        alt="" title="Genus page">
-{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title|split:' '|at_index:'0' }}
-                                        <i>{{ item_title|split:' '|slice:'1:'|safeseq|join:' ' }}</i>
-                                    </a>
-                                    {% else %}
-                                        {% if result.model_name == 'helppage' %}
-                                    <a href="{{ url_base }}{{ result.object.url_path }}"><img
-                                        src="/static/images/icons/icon-help.png"
-                                        alt="" title="Help page">
-{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title }}</a>
-                                    {% else %}
-                                        {% if result.model_name == 'glossaryhelppage' %}
-                                        <a href="{{ url_base }}{{ result.object.url_path }}"><img
-                                            src="/static/images/icons/icon-glossary.png"
-                                            alt=""
-                                            title="Glossary page">
-{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title }}</a>
-                                        {% else %}
-                                            {% if result.model_name == 'groupslistpage' %}
-                                            <a href="{% url simplekey %}"><img
-                                                src="/static/images/icons/icon-groups-list.png"
-                                                alt=""
-                                                title="Simple Key plant groups page">
-{% search_highlight result.title with query as item_title excerpt 'False' %}{{ item_title }}</a>
-                                            </a>
-                                            {% else %}
-                                                Error: unknown search
-                                                result model name.
-                                            {% endif %}
-                                        {% endif %}
-                                    {% endif %}
-                                {% endif %}
-                            {% endif %}
+                                src="/static/images/icons/icon-leaf.png"
+                                alt="" title="Species page">
+                            {{ item_title|italicize_plant|safe }}</a>
+                        {% endif %}
+                        {% if result.model_name == 'family' %}
+                            <a href="{{ url_base }}/families/{{ result.name|lower }}/"><img
+                                src="/static/images/icons/icon-family.png"
+                                alt="" title="Family page">
+                                {{ item_title }}</a>
+                        {% endif %}
+                        {% if result.model_name == 'genus' %}
+                            <a href="{{ url_base }}/genera/{{ result.name|lower }}/"><img
+                                src="/static/images/icons/icon-genus.png"
+                                alt="" title="Genus page">
+                                {{ item_title|split:' '|at_index:'0' }}
+                                <i>{{ item_title|split:' '|slice:'1:'|safeseq|join:' ' }}</i>
+                            </a>
+                        {% endif %}
+                        {% if result.model_name == 'helppage' %}
+                            <a href="{{ url_base }}{{ result.object.url_path }}"><img
+                                src="/static/images/icons/icon-help.png"
+                                alt="" title="Help page">
+                                {{ item_title }}</a>
+                        {% endif %}
+                        {% if result.model_name == 'glossaryhelppage' %}
+                            <a href="{{ url_base }}{{ result.object.url_path }}"><img
+                                src="/static/images/icons/icon-glossary.png"
+                                alt="" title="Glossary page">
+                                {{ item_title }}</a>
+                        {% endif %}
+                        {% if result.model_name == 'groupslistpage' %}
+                            <a href="{% url simplekey %}"><img
+                                src="/static/images/icons/icon-groups-list.png"
+                                alt="" title="Simple Key plant groups page">
+                                {{ item_title }}</a>
                         {% endif %}
                         <p>
                         {% search_highlight result.text with query as result_excerpt ignore_between '\n--\n' %}{{ result_excerpt }}
@@ -90,6 +81,7 @@
                     </li>
                 {% endfor %}
                 </ul>
+
                 {% if page.object_list|length == 0 %}
                     <p>Please adjust your search and try again.</p>
                 {% else %}
@@ -120,6 +112,7 @@
                     </div>
                 {% endif %}
             </div>
+
             <div id="sidebar" style="height: 515px;">
                 {% include "simplekey/_sidebar_items.html" %}
             </div>
