--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -75,6 +75,12 @@
                                 alt="" title="Simple Key plant groups page">
                                 {{ item_title }}</a>
                         {% endif %}
+                        {% if result.model_name == 'subgroupslistpage' %}
+                            <a href="{% url simplekey-pilegroup result.object.group.slug %}">
+                            <img src="/static/images/icons/icon-groups-list.png"
+                                alt="" title="Simple Key plant subgroups page">
+                                {{ item_title }}</a>
+                        {% endif %}
                         <p>
                         {% search_highlight result.text with query as result_excerpt ignore_between '\n--\n' %}{{ result_excerpt }}
                         </p>
