Add search suggestions extracted from the Simple Key pages to the search-suggestion feature. Tweak the search-suggest CSS and JS in order to make it easier to write functional tests. Add unit and functional tests.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1874 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -16,7 +16,7 @@
                         <button>Search</button>
                         <input type="text" name="q" placeholder="Search..."
                             value="{{ request.GET.q }}">
-                        <div class="hidden">
+                        <div class="menu hidden">
                             <ul></ul>
                         </div>
                         <div class="clearit"></div>
