--- a/gobotany/simplekey/templates/simplekey/search_suggest.html
+++ b/gobotany/simplekey/templates/simplekey/search_suggest.html
@@ -1,7 +1,9 @@
+{# TO DO: Delete this template after _old_base.html is obsolete, which #}
+{# will be after the About page is styled. #}
   <form id="search-suggest" action="/search/" autocomplete="off">
     <input type="text" name="q" value="{{ request.GET.q }}">
     <button>Search</button>
-    <div class="hidden">
+    <div class="menu hidden">
         <ul>
         </ul>
     </div>
