Rename MyPlants -> PlantShare.
Modify display text, CSS rules, and HTML elements for consistency.
Links to myplants.newfs.org will be modified once placeholder pages are
generated for PlantShare.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1894 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -76,7 +76,7 @@ nav #search button:active {
 #plant-id li.plant-id a,
 #plant-id-2 li.plant-id a,
 #plant-id-3 li.plant-id a,
-#myplants li.myplants a,
+#plantshare li.plantshare a,
 #advanced-id li.advanced-id a,
 #teaching-tools li.teaching-tools a,
 #about li.about a {
@@ -1589,7 +1589,7 @@ div.working-area #simple-slider .count {
 #taxon #main p {
 	margin: 0 0 15px;	
 }
-a.my-plant {
+a.plant-share {
 	display: block;
 	width: 151px;
 	height: 32px;
@@ -1597,10 +1597,10 @@ a.my-plant {
 	background: url(/static/images/layout/myplant-btn.png) 0 0 no-repeat;
 	text-indent: -9000px;	
 }
-a.my-plant:hover {
+a.plant-share:hover {
 	background-position: 0 -32px;	
 }
-a.my-plant:active {
+a.plant-share:active {
 	background-position: 0 -64px;	
 }
 a.description-control {
