Finish renaming MyPlants -> PlantShare.
Remove renaming changes to CSS rules and HTML ids just in case they're
used in other sites and could possibly break something.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1895 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -15,7 +15,7 @@
                     <h6>Go Botany</h6>
                     <p><a href="{% url simplekey %}"
                           >Simple Key</a> |
-                        <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a> |
+                        <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">PlantShare</a> |
                         <a href="/advanced/">Advanced ID Tools</a> |
                         <a href="/help/">About</a> |
                         <a href="/help/glossary/">Glossary</a></p>
