--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="three-col">
-                    <h3>MyPlants</h3>
+                    <h3>PlantShare</h3>
                     <h5>Connect with other plant fans!</h5>
                     <p>Join our on-line community of plant enthusiasts!
                     Find friends, collaborate on field surveys for plants,
