Change active navigation rules names.
Rename for MyPlants -> PlantShare story.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1897 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -76,7 +76,7 @@ nav #search button:active {
 #plant-id li.plant-id a,
 #plant-id-2 li.plant-id a,
 #plant-id-3 li.plant-id a,
-#myplants li.myplants a,
+#plantshare li.plantshare a,
 #advanced-id li.advanced-id a,
 #teaching-tools li.teaching-tools a,
 #about li.about a {
