Don't show YouTube links for items without videos.
Remove "cat" and "puppy" temporary videos and simply don't render the
YouTube video link at all if we don't have a legitmate video prepared
for the PileGroup or Pile.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1903 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -64,11 +64,13 @@
                                 <span class="section-title">Exceptions</span>
                                 {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
                             </p>
+                            {% if pile.youtube_id %}
                             <p class="vid">
                                 <a href="http://www.youtube.com/v/{{ pile.youtube_id }}&amp;autoplay=1"
                                     rel="shadowbox;height=380;width=640;">View
                                     a short video about this subgroup</a>
                             </p>
+                            {% endif %}
                             <a class="plant-in-subgroup" href="{{ pile_url }}">My plant is in this subgroup</a>
                         </div>
                         <div class="clearit"></div>
