--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -63,10 +63,12 @@
                                 <span class="section-title">Exceptions</span>
                                 {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
                             </p>
+                            {% if pilegroup.youtube_id %}
                             <p class="vid">
                             <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}&amp;autoplay=1" 
                                 rel="shadowbox;height=380;width=640;">View a short video about this group</a>
                             </p>
+                            {% endif %}
                             <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
                         </div>
                         <div class="clearit"></div>
