Fix: On subgroup/results page, Simple Key appeared 2x in page title.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1909 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -1,6 +1,6 @@
 {% extends "simplekey/_new_base.html" %}
 
-{% block title %}{{ subgroup_results_page.title }}: Simple Key{% endblock %}
+{% block title %}{{ subgroup_results_page.title }}{% endblock %}
 
 {% block js_require %}
     original_location_hash = window.location.hash; // for results_overlay.js
