Add code, styles, and images for About page.
Switch About page's base template to match other help pages, and pull
main content section of the page from http://ftsdesign.com/newfs/code/about.php
Fix a few of the links to either absolute urls or django url tags.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1945 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1899,6 +1899,33 @@ Getting Started Page Styles
     cursor: pointer;
 }
 
+/*///////////////////////////**
+About Page Styles
+////////////////////////////*/
+
+#main ul.about {
+	list-style-type:disc;
+	margin: 10px 0 30px 15px;
+	line-height: 200%;
+	
+}
+#main ul.aboutlast {
+	list-style-type:disc;
+	margin: 10px 0 60px 15px;
+	line-height: 200%;
+	
+}
+
+img.margin {
+	float: right;
+	margin: 10px 0 20px 20px;
+}
+
+img.margin-bookcover {
+	float: right;
+	margin: 10px 89px 20px 20px;
+}
+
 /* Video Help Topics page styles */
 
 .video-row {
