--- a/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
@@ -1,45 +1,25 @@
-{% extends "simplekey/_help.html" %}
+{% extends "simplekey/_new_base.html" %}
 
-{% block pagetitle %}About Go-Botany{% endblock %}
+{% block title %}PlantShare{% endblock %}
 
-{% block body_attributes %}id="about" class="claro app about"{% endblock %}
+{% block body_attributes %}id="plantshare" class="claro app plantshare"{% endblock %}
 
-{% block main_content %}
-    <h2>About Go Botany</h2>
+{% block body_content %}
+    <div id="top-wrapper">
+        {% include "simplekey/_header.html" %}
 
-        <h3>Go Botany toolkit</h3>
-        
-        <img class="margin" src="/static/images/layout/about_page_photo1.jpg" alt="" />
-        
-        <ul class="about">
-            <li>Our <a href="{% url simplekey %}">Simple Key</a> is an interactive key to 1,200 species. Answer some 
-            questions and hone in on the plant you want to identify. <a href="{% url simplekey %}">Get Started!</a></li>
-            <li>Using our <a href="{% url advanced-id-tools %}">Advanced Key</a> tools, you can use traditional dichotomous keys to identify genera within families and species within genera, and more than 3,500 species, subspecies and varieties of plants.</li>
-            <li>Use our <a href="{% url search %}">Search</a> tool to learn more about a particular plant of interest.</li>
-            <li>Learn about the habitats, characteristics, and uses of plants, view photos and maps of its distribution, and much more.</li>
-        </ul>
-            
-            
-        <h3 class="about">Resources for Teachers</h3>
-        
-        <img class="margin" src="/static/images/layout/about_page_photo2.jpg" alt="" />
-        
-        <ul class="about">
-            <li>Go Botany is designed for students and informal learners age 15 and older, from beginners to professionals. But educators can incorporate our tools into lessons for all ages! Develop your own curricula, lab modules, and field workshops using Go Botany. </li>
-            <li>New England Wild Flower Society is teaming up with three partners, <a href="http://www.montshire.org" target="_blank">Montshire Museum of Science</a>, <a href="http://peabody.yale.edu" target="_blank">Yale Peabody Museum of Natural History</a>, and the <a href="http://www.chewonki.org" target="_blank">Chewonki Foundation</a> to create customized floras, educational displays, and teaching tools! </li>
-            <li>Share your ideas with other educators using <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">PlantShare</a> and posting to our <a href="#">Teachers Page</a>.</li>
-            <li>During 2012-2013, New England Wild Flower Society will offer free trainings for educators throughout New England on how to use Go Botany. <a href="#">Sign up!</a></li>
-        </ul>
-            
-        <h3 class="about">Flora of New England</h3>
-        
-        <img class="margin-bookcover" src="/static/images/layout/about_page_bookcover.jpg" alt="" />
-            
-        <ul class="aboutlast">
-                <li>Go Botany is a four-year project funded by the <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0840186" target="_blank">National Science Foundation</a>. </li>
-                
-                <li> This web-based project builds on the Flora Novae-Angliae by Arthur Haines (forthcoming from <a href="http://yalepress.yale.edu/yupbooks/book.asp?isbn=9780300171549" target="_blank">Yale University Press</a>), the first comprehensive scientific reference on the region's plant species to be published in the last 25 years.</li>
-                <li><a href="#">Watch a short video about this project.</a></li>
-        </ul>
+        <div class="content">
+            <div class="container">
+                <div id="main">
+                    <h2>PlantShare</h2>
+                    <p>Soon, you'll be able to connect with other plant fans 
+                    to share your plant discoveries, form affinity groups, 
+                    and create customized checklists of plants you have found. 
+                    PlantShare will go live in Summer 2012. Check back 
+                    soon!</p>
+                </div>
 
+                <div class="clearit"></div>
+            </div>
+        </div>
 {% endblock %}
