--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -83,6 +83,10 @@ nav #search button:active {
 	background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat;	
 }
 
+#plantshare #sidebar a:hover {
+    text-decoration: none;
+}
+
 #home li.home a, #home li a:hover {
 	background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent;	
 }
