Add template and styles for Teaching placeholder.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1951 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -83,7 +83,8 @@ nav #search button:active {
 	background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat;	
 }
 
-#plantshare #sidebar a:hover {
+#plantshare #sidebar a:hover,
+#teaching-tools #sidebar a:hover {
     text-decoration: none;
 }
 
