--- a/gobotany/simplekey/templates/simplekey/teaching_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/teaching_placeholder.html
@@ -19,7 +19,7 @@
                     <p>Go Botany is designed for students and informal learners 
                     ages 15 and older, from beginners to professionals.  
                     Educators can incorporate Go Botany tools into lessons for 
-                    all ages!</p>
+                    all ages!</p><br />
                     <p>Soon, you’ll be able to share the curricula, modules, 
                     and field workshops you have developed with many other 
                     educators in this Teaching Resources section or 
@@ -28,7 +28,7 @@
                 <div id="sidebar">
                     <div class="section">
                         {% url teaching-tools-placeholder as u %}
-                        <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>PlantShare</a></h5>
+                        <h5><a class="sidebarlink" {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Teaching Tools</a></h5>
                     </div>
                     {% block more_sidebar_content %}{% endblock %}
                 </div>
