For species pages not in the Simple Key show a note instead of breadcrumbs.
Remove incorrect breacrumb if the species isn't in the Simple Key, and add
a note about complete data coming soon.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1955 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1594,6 +1594,13 @@ div.working-area #simple-slider .count {
 #taxon #main p {
 	margin: 0 0 15px;	
 }
+
+#taxon p.note {
+    color: #807121;
+    font-weight: bold;
+    text-align: center;
+}
+
 a.description-control {
 	display: block;
 	padding: 3px 0 3px 25px;
