--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -31,11 +31,19 @@
     <div class="content">
         <div class="container">
             <div id="main">
-                <div id="breadcrumb">
-                    <p class="nogloss">You are here: 
-                    <a href="{% url simplekey %}">Simple Key</a>
-                    &gt;
-                    <a href="{% url simplekey-pilegroup pilegroup.slug %}"
+                {% if not in_simple_key %}
+                    <p class="note">This is a species in our Full Key.
+                    Complete data are coming soon.</p>
+                {% endif %}
+
+                {# TODO: After implementing Full Key and navigation, #}
+                {# show appropriate breadcrumb links.                #}
+                {% if in_simple_key %}
+                    <div id="breadcrumb">
+                        <p class="nogloss">You are here: 
+                        <a href="{% url simplekey %}">Simple Key</a>
+                        &gt;
+                        <a href="{% url simplekey-pilegroup pilegroup.slug %}"
                             >{{ pilegroup.friendly_title|lower|capfirst }}</a>
                         &gt; 
                         <a href="{% if last_plant_id_url and pile.slug in last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
@@ -44,7 +52,8 @@
                         <span>{{ scientific_name|italicize_plant|safe }}
                            {# If the above is too long, can use scientific_name_short #}
                         </span></p>
-                </div>
+                    </div>
+                {% endif %}
                 
                 <h2>
                     <span class="scientific">
